--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,11 @@
         <item name="android:actionOverflowButtonStyle">@style/Overflow</item>
     </style>
 
+    <style name="AppTheme.Leanback" parent="@style/Theme.Leanback">
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+    </style>
 
     <style name="AppIntro" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>
