--- a/app/src/main/res/layout/message_sending.xml
+++ b/app/src/main/res/layout/message_sending.xml
@@ -18,11 +18,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:gravity="end">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    android:gravity="end"
+    android:focusable="true"
+    android:background="@drawable/focusable_background">
 
     <LinearLayout
         android:layout_width="wrap_content"
