--- a/api_implementation/src/main/res/layout/api_activity_login.xml
+++ b/api_implementation/src/main/res/layout/api_activity_login.xml
@@ -16,10 +16,12 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/api_window_background"
-    android:id="@+id/background">
+    android:id="@+id/background"
+    tools:ignore="Overdraw">
 
     <LinearLayout
         android:layout_width="300dp"
@@ -30,7 +32,8 @@
         android:background="@color/api_login_background"
         android:padding="16dp"
         android:id="@+id/initial_layout"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        tools:ignore="Overdraw">
 
         <Button
             android:layout_width="match_parent"
@@ -199,7 +202,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/signup_error_hint"
-                android:layout_marginLeft="2dp"/>
+                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"/>
 
         </LinearLayout>
 
