--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="September 16th, 2016">
         <text>Android TV app</text>
         <text>Messaging style notifications for Nougat</text>
+        <text>Improved sharing</text>
         <text>Better switching to night mode based on device clock</text>
         <text>Immediate theme feedback in settings when changing a value</text>
     </version>
