widget improvements, open app with click on title and add unread circle to list item

--- a/app/src/main/res/layout/appwidget.xml
+++ b/app/src/main/res/layout/appwidget.xml
@@ -34,7 +34,8 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@android:color/white"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/compose" />
+            android:layout_toStartOf="@+id/compose"
+            android:id="@+id/title" />
 
         <ImageButton
             android:id="@+id/compose"
