--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,8 +22,10 @@
         <text>Android TV app</text>
         <text>Messaging style notifications for Nougat</text>
         <text>Improved sharing</text>
+        <text>Improved widget</text>
         <text>Better switching to night mode based on device clock</text>
         <text>Immediate theme feedback in settings when changing a value</text>
+        <text>Tons of bug fixes and various improvements</text>
     </version>
 
     <version
