set up a second page for the android wear notifications that can be toggled by feature flag

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -23,6 +23,7 @@
         <text>Messaging style notifications for Nougat</text>
         <text>Improved sharing</text>
         <text>Improved widget</text>
+        <text>Android Wear improvements</text>
         <text>Better switching to night mode based on device clock</text>
         <text>Immediate theme feedback in settings when changing a value</text>
         <text>Tons of bug fixes and various improvements</text>
