--- a/app/src/main/res/layout/appwidget.xml
+++ b/app/src/main/res/layout/appwidget.xml
@@ -22,8 +22,15 @@
     <RelativeLayout
         android:id="@+id/actionbar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/colorPrimary">
+        android:layout_height="48dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@color/colorPrimary"
+            android:id="@+id/toolbar"
+            android:scaleType="fitXY"
+            android:contentDescription="@null"/>
 
         <TextView
             android:layout_width="match_parent"
