--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -17,6 +17,14 @@
 <changelog>
 
     <version
+        name="1.5.0"
+        description="September 23rd, 2016">
+        <text>Private conversation notifications</text>
+        <text>Theme improvements</text>
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="1.4.1"
         description="September 20th, 2016">
         <text>Bug fixes</text>
