--- a/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -105,6 +105,7 @@
                 android:src="@drawable/ic_add"
                 android:id="@+id/fab"
                 android:layout_gravity="bottom|end"
+                android:contentDescription="@string/compose_message"
                 android:layout_margin="@dimen/fab_margin"
                 app:elevation="6dp"
                 app:pressedTranslationZ="12dp"
