--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -80,6 +80,7 @@
             android:id="@+id/fab"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
+            android:contentDescription="@string/compose_message"
             app:elevation="6dp"
             app:pressedTranslationZ="12dp"
             app:fabSize="normal"
