--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -149,6 +149,7 @@
                 android:id="@+id/send"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:contentDescription="@string/send_message"
                 app:elevation="0dp"
                 app:fabSize="mini"
                 android:layout_gravity="center_vertical" />
