feature flag the content observer timeout

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -23,7 +23,7 @@
         <text>Resend failed SMS</text>
         <text>Option to only use light theme</text>
         <text>Theme improvements</text>
-        <text>Bug fixes</text>
+        <text>So many bug fixes, wow.</text>
     </version>
 
     <version
