--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,8 +22,7 @@
         <text>Private conversation notifications</text>
         <text>Resend failed SMS</text>
         <text>Option to only use light theme</text>
-        <text>Theme improvements</text>
-        <text>So many bug fixes, wow.</text>
+        <text>So many bug fixes, minor features, and little tweaks, wow.</text>
     </version>
 
     <version
