--- a/api_implementation/src/main/res/layout/api_activity_login.xml
+++ b/api_implementation/src/main/res/layout/api_activity_login.xml
@@ -137,6 +137,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/api_continue"
             app:fabSize="normal"
             app:borderWidth="0dp"
             app:backgroundTint="@color/api_fab_background" />
