don't use a vector drawable for shortcut badge. Still doesn't work

--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <shortcut
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/shortcut_compose"
         android:enabled="true"
         shortcutId="manifest-shortcut-compose-sms"
         shortcutShortLabel="@string/shortcut_compose_short"
-        shortcutLongLabel="@string/shortcut_compose_long">
+        shortcutLongLabel="@string/shortcut_compose_short">
 
         <intent
             android:targetPackage="xyz.klinker.messenger"
