add option to the my account section to resync account, on non-primary devices

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,6 +22,8 @@
         <text>Changes to the message list</text>
         <text>Italicize muted conversation</text>
         <text>Various searching improvements</text>
+        <text>Lot of other, small, features</text>
+        <text>UI updates</text>
         <text>Bug fixes</text>
         <text>More encryption fixes</text>
         <text>Crash fixes</text>
