--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -70,17 +70,34 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="48dp"
                 android:layout_marginTop="12dp"
-                android:scaleType="fitCenter" />
+                android:scaleType="centerCrop" />
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginEnd="48dp"
-                android:background="@color/colorPrimary"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_close"
-                android:id="@+id/remove_image"
-                android:contentDescription="@string/remove_image" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="12dp"
+                    android:background="@color/colorPrimary"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:src="@drawable/ic_close"
+                    android:id="@+id/remove_image"
+                    android:contentDescription="@string/remove_image" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@color/colorPrimary"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:src="@drawable/ic_edit"
+                    android:layout_gravity="bottom"
+                    android:id="@+id/edit_image"
+                    android:contentDescription="@string/edit_image" />
+
+            </LinearLayout>
 
         </FrameLayout>
 
